xog/k8s/api-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: nueng1996/api

---
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip-srv
spec:
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 3001
      targetPort: 3001
