xog/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: api.dev
      http:
        paths:
          - path: /api/[A-Z]
            backend:
              serviceName: api-clusterip-srv
              servicePort: 3001
